# metal-motif-counting

./: .gitignore  CMakeLists.txt  README.md  compute.metal  gpuprocessing.cpp  main.cpp  readsource.cpp
metalcpp/: CMakeLists.txt
shaders/: compute.air  compute.metallib
